<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/arys"
        android:textSize="27dp"
        android:padding="4dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:id="@+id/titleaddelete"/>


    <LinearLayout
        android:id="@+id/buttonholder2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_below="@id/titleaddelete"
        android:layout_centerInParent="true">


        <Button
            android:id="@+id/canceldeletebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#E35E5E"
            android:layout_marginRight="80dp"
            android:textStyle="bold"
            android:text="@string/Back"/>

        <Button
            android:id="@+id/deletebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#52DD39"
            android:textStyle="bold"
            android:text="@string/Confirm"/>


    </LinearLayout>

</RelativeLayout>